minikube-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - args:
            - export JWT_SECRET_KEY=$(cat $JWT_SECRET_KEY_FILE)  && exec gunicorn main:app -c gunicorn.conf.py -k uvicorn.workers.UvicornWorker --bind 0.0.0:8000
          command:
            - /bin/sh
            - -c
          image: wct-stats-backend:minikube
          imagePullPolicy: Never
          name: backend
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /run/secrets
              name: backend-secret
      restartPolicy: Always
      volumes: 
      - name: backend-secret
        emptyDir: {}
